--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <div id="wrapper">
       <div id="header">
-        <strong>　ブログ</strong>
+        <strong>　てっくんブログ</strong>
       </div>
       <div id=content>
         <%= yield %>
